2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditHost.aspx: Updated with new queue management options.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.aspx.cs: Correctly load the parent lane.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLanes.aspx.cs:
	* EditHosts.aspx.cs: Redirect to the confirmation page instead of
	deleting.

	* Delete.aspx:
	* Delete.aspx.cs:
	* Delete.aspx.designer.cs: Added, confirmation page before doing
	extensive deletes.

	* MonkeyWrench.Web.UI.csproj: Updated.

2009-09-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditHost.aspx:
	* EditHost.aspx.cs: Add support for setting the password for a host,
	and provide a sample MonkeyWrench.xml configuration file.

	* EditHost.aspx.designer.cs: Regenerated.

	* Makefile: We need to reference System.Drawing.dll now.

2009-07-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ReportCommit.aspx.cs: Instead of executing a process which calls the
	web service, just call the web service (which is async anyway).

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Optimize a bit by transmitting data as
	we transform it, instead of using a temporary file and call
	TransmitFile. This also fixes an issue with TransmitFile and apache.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs:
	* Master.master.cs:
	* Login.aspx.cs:
	* GetFile.aspx.cs: Updated according to API changes.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Login.aspx.cs: Save the user too in the cookies.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EditLane.aspx: Add some help for deletion directives.

	* MonkeyWrench.Web.UI.csproj: Updated.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Admin.aspx: Add support for running deletion directives
	manually.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ViewHtmlReport.aspx.cs: Update according to CreateWebServiceDownloadUrl